# GradUWate-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  parsing.py
app/.github/: pull_request_template.md
app/api/v1/endpoints/: course.py  ingest.py
app/core/: config.py  logging.py
app/db/: bootstrap.py  requirements_parsing.py  session.py
app/db/models/: courses.py
app/db/neo4j/: graph_adapter.py
app/db/postgres/: crud.py  session.py
tests/: test_health.py
