
[tool.poetry]
name = "course-graph-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for SE390 Course Graph (Poetry-managed)."
authors = ["SE390 Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115"
uvicorn = {version = ">=0.30", extras = ["standard"]}
pydantic = ">=2.8"
pydantic-settings = ">=2.4"
neo4j = ">=5.23"
psycopg = { version = ">=3.2", extras = ["binary"] }
requests = ">=2.32"
beautifulsoup4 = "^4.14.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
psycopg2-binary = "^2.9.11"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3"
httpx = ">=0.27"
ruff = ">=0.6"
mypy = ">=1.11"
types-requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
disallow_untyped_defs = true
